[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" type="Texture" id=1]
[ext_resource path="res://entities/problem_solver/problem_solver.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/database/database.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[node name="database" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
vframes = 10
frame = 82

[node name="collission_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="interact_area" type="Area2D" parent="."]

[node name="collission_shape" type="CollisionShape2D" parent="interact_area"]
shape = SubResource( 2 )

[node name="control" type="Control" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0

[node name="interact_button" type="Label" parent="control"]
margin_left = 21.0
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
text = "E"

[node name="problem_solver" parent="." instance=ExtResource( 2 )]
visible = false
tutorial_text = "Make a for loop that will print 0 to 4
"
initial_code = "ldict = {}"
checker = "return [\"You need to print 0-4\", False]"

[connection signal="body_entered" from="interact_area" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="interact_area" to="." method="_on_interact_area_body_exited"]
[connection signal="finish_problem" from="problem_solver" to="." method="_on_problem_solver_finish_problem"]
